--- a/app/src/main/res/layout-land/fragment_stakeholder_new.xml
+++ b/app/src/main/res/layout-land/fragment_stakeholder_new.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="20dp"
-        tools:context=".fragments.stakeholders.StakeholderNew">
+        tools:context=".fragments.microaccounts.StakeholderNew">
 
 
         <EditText
