--- a/app/src/main/res/layout/fragment_stakeholder_filter.xml
+++ b/app/src/main/res/layout/fragment_stakeholder_filter.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="20dp"
-        tools:context=".fragments.stakeholders.StakeholderFilter">
+        tools:context=".fragments.microaccounts.StakeholderFilter">
 
         <TextView
             android:id="@+id/lblStakeholderFilterAttributes2"
