--- a/app/src/main/res/layout/fragment_stakeholder_new.xml
+++ b/app/src/main/res/layout/fragment_stakeholder_new.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
 
     android:id="@+id/frameLayout6"
-    tools:context=".fragments.stakeholders.StakeholderNew">
+    tools:context=".fragments.microaccounts.StakeholderNew">
 
     <Button
         android:id="@+id/btn_picture_NewStakeholder"
