--- a/app/src/main/res/layout/rec_view_item_accounts.xml
+++ b/app/src/main/res/layout/rec_view_item_accounts.xml
@@ -2,19 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
-    android:layout_marginTop="10dp"
-    android:background="@color/rec_view_gray"
-  >
-
+    android:layout_height="wrap_content"
+    android:background="@color/contador_bg"
+    android:paddingVertical="10dp"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/RecView_ChooseAc"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:paddingVertical="9dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/accounts_first_background"
+        android:paddingHorizontal="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,52 +23,80 @@
             android:id="@+id/text_Account_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textSize="15sp"
+            android:text="Gonzales Ortega"
+            android:textColor="#ecebbd"
+            android:textAllCaps="true"
+            android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/guideline6"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/text_Account_balance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="TextView"
-            app:layout_constraintStart_toStartOf="@+id/guideline6"
-            app:layout_constraintTop_toBottomOf="@+id/text_Account_name" />
+        <LinearLayout
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline6"
-            android:layout_width="wrap_content"
+            android:id="@+id/linearLayout"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/accounts_second_background"
             android:orientation="vertical"
-            app:layout_constraintGuide_begin="20dp" />
+            android:padding="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_Account_name">
+
+            <TextView
+                android:id="@+id/text_Account_balance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="MX $5,000,000.00"
+                android:textColor="@color/white"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="70dp"
-        android:id="@+id/second"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        >
-        <androidx.appcompat.widget.AppCompatImageButton
+        <ImageButton
             android:id="@+id/imageAddTransaction"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="15dp"
+            android:contentDescription="addNewTransaction"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            android:backgroundTint="#414141"
+            app:layout_constraintStart_toEndOf="@+id/imageEditAccount"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+            app:srcCompat="@drawable/ic_baseline_add_24">
+
+        </ImageButton>
+
+        <ImageButton
+            android:id="@+id/imageEditAccount"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="15dp"
+            android:contentDescription="editAccount"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/imageAddTransaction"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/icon_add"
-            tools:src="@drawable/icon_add"
-            tools:srcCompat="@drawable/icon_add" />
+            android:backgroundTint="#414141"
+
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+            app:srcCompat="@drawable/icon_contracts">
+
+        </ImageButton>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
 
 
 
