--- a/app/src/main/res/layout/fragment_all_transactions.xml
+++ b/app/src/main/res/layout/fragment_all_transactions.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.transactions.AllTransactions"
-    android:padding="15dp">
+    android:paddingVertical="10dp">
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -23,12 +23,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/settings"
-        app:backgroundTint="?attr/colorPrimary"
+        app:backgroundTint="@color/fb_color"
         app:fabCustomSize="60dp"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:maxImageSize="40dp"
-        app:srcCompat="@drawable/ic_baseline_add_24" />
+        app:srcCompat="@drawable/ic_baseline_add_24"
+        android:layout_marginEnd="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="7dp"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
