--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:id="@+id/linearLayout2"
     tools:context=".fragments.accounts.Accounts"
-    android:padding="15dp">
+    android:paddingVertical="10dp">
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerAccounts"
@@ -23,12 +23,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/settings"
-        app:backgroundTint="#e4b31d"
+        app:backgroundTint="@color/fb_color"
         app:fabCustomSize="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:maxImageSize="40dp"
-        app:srcCompat="@drawable/ic_baseline_add_24" />
+        app:srcCompat="@drawable/ic_baseline_add_24"
+        android:layout_marginEnd="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="7dp"/>
 
 
 
