--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -10,10 +10,12 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="304dp"
-        android:layout_height="366dp"
-        android:src="@drawable/blu_one"
+        android:layout_width="308dp"
+        android:layout_height="363dp"
+        android:layout_marginTop="44dp"
+        android:src="@drawable/yellow1"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,7 +23,7 @@
         android:id="@+id/imageView"
         android:layout_width="399dp"
         android:layout_height="371dp"
-        android:layout_marginBottom="68dp"
+        android:layout_marginBottom="64dp"
         android:src="@drawable/a_chinga"
         app:layout_constraintBottom_toTopOf="@+id/guideline7"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,7 +106,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sign In With Email"
-        android:background="#3CA5D6"
+        android:background="@color/fb_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline8" />
