--- a/app/src/main/res/layout/rec_view_item_accounts.xml
+++ b/app/src/main/res/layout/rec_view_item_accounts.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Gonzales Ortega"
-            android:textColor="#ecebbd"
+            android:textColor="@color/text_titles"
             android:textAllCaps="true"
             android:textSize="20sp"
             android:textStyle="bold"
