formatting Transactions list new update

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,7 +15,7 @@
     <color name="rec_view_gray">#5a5a5a</color>
     <color name="rec_view_transactions">#282828</color>
     <color name="rec_view_title">#eed075</color>
-    <color name="rec_view_negative_amount">#e4811d</color>
+    <color name="rec_view_negative_amount">#e4b31d</color>
     <color name="fb_color">#cfa219</color>
     <color name="text_titles">#e4b31d</color>
 
