--- a/app/src/main/res/layout/rec_view_item_all_transactions.xml
+++ b/app/src/main/res/layout/rec_view_item_all_transactions.xml
@@ -5,8 +5,8 @@
     android:id="@+id/recVew_Item_AllTransactions"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
     android:paddingHorizontal="15dp"
+    android:layout_marginBottom="2dp"
     android:background="@color/rec_view_transactions">
 
     <TextView
