--- a/app/src/main/res/layout/rec_view_item_all_transactions.xml
+++ b/app/src/main/res/layout/rec_view_item_all_transactions.xml
@@ -19,7 +19,7 @@
         android:layout_marginBottom="10dp"
 
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintBottom_toTopOf="@+id/textPaidBy"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -42,11 +42,11 @@
         app:layout_constraintGuide_begin="10dp" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textPaidBy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="pagado por"
+        android:text="@string/paid_by"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
         app:layout_constraintTop_toBottomOf="@+id/text_title_allTrans" />
@@ -56,9 +56,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Yesterday"
-        app:layout_constraintBottom_toBottomOf="@+id/textView4"
+        app:layout_constraintBottom_toBottomOf="@+id/textPaidBy"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView4" />
+        app:layout_constraintTop_toTopOf="@+id/textPaidBy" />
 
     <TextView
         android:id="@+id/text_nameOfParticipant"
@@ -67,8 +67,8 @@
         android:layout_marginLeft="5dp"
         android:text="Patricio Castillo"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toTopOf="@+id/textView4"
+        app:layout_constraintStart_toEndOf="@+id/textPaidBy"
+        app:layout_constraintTop_toTopOf="@+id/textPaidBy"
         android:layout_marginStart="5dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
