--- a/app/src/main/res/layout/fragment_transaction_new.xml
+++ b/app/src/main/res/layout/fragment_transaction_new.xml
@@ -64,7 +64,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/amount"
         android:inputType="number"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
 
         />
 
@@ -73,7 +73,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/stakeholder"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
 
 
         />
@@ -126,6 +126,8 @@
                 android:inputType="textMultiLine"
                 android:hint="@string/additional_comments"
                 android:layout_marginTop="10dp"
+                android:maxLength="50"
+
 
 
         />
