--- a/app/src/main/res/layout/fragment_transaction_new.xml
+++ b/app/src/main/res/layout/fragment_transaction_new.xml
@@ -48,15 +48,56 @@
                     android:paddingVertical="10dp"/>
 
             </RadioGroup>
-    <EditText
-        android:id="@+id/text_newTransaction_title"
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/title"
-        android:layout_marginTop="20dp"
-        android:inputType="text"
-        android:maxLength="22"
-        />
+        android:layout_marginTop="30dp">
+
+        <EditText
+            android:id="@+id/text_newTransaction_title"
+            android:layout_width="269dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/title"
+            android:inputType="text"
+            android:maxLength="30"
+            app:layout_constraintEnd_toStartOf="@+id/imageButton_chooseCategory"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/text_newTransaction_wordCounter"
+            android:layout_width="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_height="wrap_content"
+            android:text="Words: 0/30"
+            android:textColor="@color/light_grey"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_newTransaction_title" />
+
+        <ImageButton
+            android:id="@+id/imageButton_chooseCategory"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            app:layout_constraintBottom_toBottomOf="@+id/imageButton_addPicture"
+            app:layout_constraintEnd_toStartOf="@+id/imageButton_addPicture"
+            app:layout_constraintTop_toTopOf="@+id/imageButton_addPicture"
+            app:srcCompat="@drawable/ic_tag" />
+
+        <ImageButton
+            android:id="@+id/imageButton_addPicture"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            app:layout_constraintBottom_toBottomOf="@+id/text_newTransaction_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/text_newTransaction_title"
+            app:srcCompat="@drawable/ic_baseline_add_a_photo_24" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <EditText
         android:id="@+id/ed_txt_amount"
@@ -64,8 +105,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/amount"
         android:inputType="number"
-        android:layout_marginTop="20dp"
-
+        android:layout_marginTop="30dp"
         />
 
     <TextView
@@ -73,9 +113,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/stakeholder"
-                android:layout_marginTop="20dp"
-
-
+                android:layout_marginTop="30dp"
         />
 
     <TextView
@@ -88,36 +126,36 @@
         android:text="@string/select_an_stakeholder"
         />
 
-    <TextView
-                android:id="@+id/txtCategory"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/select_a_category"
-                android:layout_marginTop="10dp"
+<!--    <TextView-->
+<!--                android:id="@+id/txtCategory"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="@string/select_a_category"-->
+<!--                android:layout_marginTop="10dp"-->
 
 
-        />
-            <Spinner
-                android:id="@+id/sp_TransCategory"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-               />
-    <TextView
-                android:id="@+id/txtSubCategory"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/select_a_sub_category"
-            android:layout_marginTop="10dp"
+<!--        />-->
+<!--    <Spinner-->
+<!--        android:id="@+id/sp_TransCategory"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="5dp"-->
+<!--        />-->
+<!--    <TextView-->
+<!--        android:id="@+id/txtSubCategory"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="@string/select_a_sub_category"-->
+<!--        android:layout_marginTop="10dp"-->
 
-        />
+<!--        />-->
 
-            <Spinner
-                android:id="@+id/sp_TransSubcategory"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-             />
+<!--    <Spinner-->
+<!--        android:id="@+id/sp_TransSubcategory"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="5dp"-->
+<!--        />-->
 
     <EditText
                 android:id="@+id/ed_txt_notes"
@@ -125,15 +163,20 @@
                 android:layout_height="wrap_content"
                 android:inputType="textMultiLine"
                 android:hint="@string/additional_comments"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="30dp"
                 android:maxLength="50"
-
-
-
         />
+    <TextView
+        android:id="@+id/text_newTransaction_wordCounter2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/light_grey"
+        android:layout_marginLeft="4dp"
+        android:text="Words: 0/50"
+        android:layout_marginStart="4dp" />
 
     <Button
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="80dp"
         android:id="@+id/btn_confirm_NewTransaction"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
