--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -27,6 +27,9 @@
         <action
             android:id="@+id/action_newTransaction_to_chooseStakeHolderDialog"
             app:destination="@id/chooseStakeHolderDialog" />
+        <action
+            android:id="@+id/action_newTransaction_to_chooseCategory"
+            app:destination="@id/chooseCategory" />
     </fragment>
     <fragment
         android:id="@+id/stakeholderDisplay"
@@ -179,4 +182,9 @@
             android:name="accountID"
             app:argType="string" />
     </fragment>
+    <fragment
+        android:id="@+id/chooseCategory"
+        android:name="be.kuleuven.elcontador10.fragments.transactions.ChooseCategory"
+        android:label="fragment_choose_category"
+        tools:layout="@layout/fragment_choose_category" />
 </navigation>
