--- a/app/src/main/res/layout/rec_view_contracts.xml
+++ b/app/src/main/res/layout/rec_view_contracts.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="2dp"
-    android:background="@drawable/accounts_first_background"
-    android:paddingBottom="16dp">
+    android:background="@drawable/accounts_first_background">
 
     <TextView
         android:id="@+id/contract_title"
@@ -19,7 +18,6 @@
         android:text="placeholder"
         android:textColor="@color/rec_view_title"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/contract_expand"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/contract_expand" />
 
@@ -42,5 +40,15 @@
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/contract_expand"
         app:layout_constraintStart_toStartOf="@+id/contract_title"
+        app:layout_constraintTop_toBottomOf="@+id/contract_divider" />
+
+    <View
+        android:id="@+id/contract_divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="12dp"
+        android:background="?android:attr/listDivider"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/contract_expand" />
 </androidx.constraintlayout.widget.ConstraintLayout>
