--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -21,7 +21,7 @@
     </fragment>
     <fragment
         android:id="@+id/newTransaction"
-        android:name="be.kuleuven.elcontador10.fragments.transactions.TransactionNew"
+        android:name="be.kuleuven.elcontador10.fragments.transactions.NewTransaction.TransactionNew"
         android:label="fragment_new_transaction"
         tools:layout="@layout/fragment_transaction_new" >
         <action
@@ -107,7 +107,7 @@
     </fragment>
     <fragment
         android:id="@+id/chooseStakeHolderDialog"
-        android:name="be.kuleuven.elcontador10.fragments.transactions.ChooseStakeHolder"
+        android:name="be.kuleuven.elcontador10.fragments.transactions.NewTransaction.ChooseStakeHolder"
         android:label="fragment_choose_stake_holder"
         tools:layout="@layout/fragment_choose_stake_holder" >
         <action
@@ -184,7 +184,7 @@
     </fragment>
     <fragment
         android:id="@+id/chooseCategory"
-        android:name="be.kuleuven.elcontador10.fragments.transactions.ChooseCategory"
+        android:name="be.kuleuven.elcontador10.fragments.transactions.NewTransaction.ChooseCategory"
         android:label="fragment_choose_category"
         tools:layout="@layout/fragment_choose_category" />
 </navigation>
