--- a/app/src/main/res/layout/fragment_choose_stake_holder.xml
+++ b/app/src/main/res/layout/fragment_choose_stake_holder.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout7"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.transactions.ChooseStakeHolder"
+    tools:context=".fragments.transactions.NewTransaction.ChooseStakeHolder"
     android:padding="15dp"
     >
 
