--- a/app/src/main/res/layout/rec_view_item_categories.xml
+++ b/app/src/main/res/layout/rec_view_item_categories.xml
@@ -6,7 +6,7 @@
     android:layout_marginVertical="5dp"
     android:paddingVertical="10dp"
     android:paddingHorizontal="20dp"
-    android:background="@color/rec_view_gray"
+    android:background="@color/rec_view_transactions"
     android:id="@+id/recView_item_categories"
     >
         <TextView
@@ -22,14 +22,15 @@
             app:layout_constraintTop_toTopOf="parent"
             />
 
-        <ImageView
+        <TextView
             android:id="@+id/imageButton_category_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
+            android:text="⚙️"
+            android:textSize="25sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_baseline_business_24" />
+            />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
