--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,7 +19,8 @@
     <color name="fb_color">#cfa219</color>
     <color name="text_titles">#e4b31d</color>
     <color name="button">#b89016</color>
-    <color name="light_grey">#747272</color>
+    <color name="light_grey">#8d8c8c</color>
+    <color name="transparent">#00A3A3A3</color>
 
 
 </resources>
