--- a/app/src/main/res/layout/fragment_micro_account_contracts.xml
+++ b/app/src/main/res/layout/fragment_micro_account_contracts.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/settings"
-        app:backgroundTint="?attr/colorPrimary"
+        app:backgroundTint="@color/fb_color"
         app:fabCustomSize="60dp"
 
         app:layout_constraintBottom_toBottomOf="parent"
