--- a/app/src/main/res/layout/fragment_transaction_display.xml
+++ b/app/src/main/res/layout/fragment_transaction_display.xml
@@ -180,22 +180,22 @@
                             android:textStyle="bold"
                             android:layout_marginBottom="10dp"
                             />
+
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:orientation="horizontal"
-                            android:gravity="center"
                             android:layout_marginBottom="10dp"
-                            >
+                            android:gravity="center"
+                            android:orientation="horizontal">
+
                                 <TextView
                                     android:id="@+id/textConcerning"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="@string/concerning"
-                                    android:textColor="@color/rec_view_gray"
-                                    android:layout_marginRight="10dp"
                                     android:layout_marginEnd="10dp"
-                                    />
+                                    android:layout_marginRight="10dp"
+                                    android:text="@string/concerning"
+                                    android:textColor="@color/rec_view_gray" />
 
                                 <TextView
                                     android:id="@+id/textConcerningDisplay"
@@ -203,9 +203,8 @@
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
                                     android:text="TextView"
-                                    android:textStyle="bold"
                                     android:textColor="@color/rec_view_gray"
-                                    />
+                                    android:textStyle="bold" />
 
                         </LinearLayout>
 
