layout for add Category

--- a/app/src/main/res/layout-land/fragment_stakeholder_display.xml
+++ b/app/src/main/res/layout-land/fragment_stakeholder_display.xml
@@ -28,7 +28,7 @@
         android:id="@+id/btn_delete_DisplayStakeholder"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/buttons"
+        android:background="@drawable/background_buttons"
         android:text="@string/delete"
         app:layout_constraintEnd_toStartOf="@+id/btn_edit_DisplayStakeholder"
         app:layout_constraintHorizontal_bias="0.5"
@@ -40,7 +40,7 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/buttons"
+        android:background="@drawable/background_buttons"
         android:text="@string/edit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
