--- a/app/src/main/res/layout-land/fragment_stakeholder_new.xml
+++ b/app/src/main/res/layout-land/fragment_stakeholder_new.xml
@@ -94,7 +94,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
-            android:background="@drawable/buttons"
+            android:background="@drawable/background_buttons"
             android:text="@string/close"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.15"
@@ -105,7 +105,7 @@
             android:id="@+id/btn_confirm_NewTransaction"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/buttons"
+            android:background="@drawable/background_buttons"
             android:text="@string/confirm"
             app:layout_constraintBottom_toBottomOf="@+id/btn_cancel_NewTransaction"
             app:layout_constraintEnd_toEndOf="parent"
@@ -118,7 +118,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:background="@drawable/buttons"
+            android:background="@drawable/background_buttons"
             android:text="Choose Picture"
             app:layout_constraintEnd_toEndOf="@+id/StakeholderNewImageView"
             app:layout_constraintStart_toStartOf="@+id/StakeholderNewImageView"
