--- a/app/src/main/res/layout/fragment_transactions_filter.xml
+++ b/app/src/main/res/layout/fragment_transactions_filter.xml
@@ -147,7 +147,7 @@
         android:id="@+id/btn_filter_FilterTrans"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/buttons"
+        android:background="@drawable/background_buttons"
         android:text="@string/filter"
         android:layout_marginTop="50dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -160,7 +160,7 @@
         android:id="@+id/btn_cancel_FilterTrans"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/buttons"
+        android:background="@drawable/background_buttons"
         android:text="@string/clear"
         android:layout_marginTop="50dp"
         app:layout_constraintEnd_toEndOf="parent"
