--- a/app/src/main/res/layout/fragment_add_new_account.xml
+++ b/app/src/main/res/layout/fragment_add_new_account.xml
@@ -45,7 +45,7 @@
             android:layout_width="match_parent"
             android:layout_marginTop="50dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/buttons"
+            android:background="@drawable/background_buttons"
             android:text="@string/confirm"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
