--- a/app/src/main/res/layout/fragment_add_new_microaccount.xml
+++ b/app/src/main/res/layout/fragment_add_new_microaccount.xml
@@ -53,7 +53,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:background="@drawable/buttons"
+            android:background="@drawable/background_buttons"
             android:text="@string/confirm"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
