--- a/app/src/main/res/layout/fragment_stakeholder_filter.xml
+++ b/app/src/main/res/layout/fragment_stakeholder_filter.xml
@@ -45,7 +45,7 @@
             android:id="@+id/btn_cancel_FilterStakeholder"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/buttons"
+            android:background="@drawable/background_buttons"
             android:text="Clear"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -59,7 +59,7 @@
             android:id="@+id/btn_filter_FilterStakeholder"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/buttons"
+            android:background="@drawable/background_buttons"
             android:text="@string/filter"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
