--- a/app/src/main/res/layout/fragment_transaction_new.xml
+++ b/app/src/main/res/layout/fragment_transaction_new.xml
@@ -191,7 +191,7 @@
         android:id="@+id/btn_confirm_NewTransaction"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/buttons"
+        android:background="@drawable/background_buttons"
         android:text="@string/confirm"
      />
 
