--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,6 +23,7 @@
     <color name="transparent">#00A3A3A3</color>
     <color name="dark_header">#1c1c1c</color>
     <color name="light_red_warning">#ff8989</color>
+    <color name="toolBar_color">#212121</color>
 
 
 </resources>
