--- a/app/src/main/res/drawable/background_accounts_second.xml
+++ b/app/src/main/res/drawable/background_accounts_second.xml
@@ -14,6 +14,7 @@
         android:bottom="1dp"
         />
 
-    <corners android:bottomRightRadius="7dp" android:bottomLeftRadius="7dp"
-        android:topLeftRadius="7dp" android:topRightRadius="7dp"/>
+    <corners
+        android:bottomRightRadius="0dp" android:bottomLeftRadius="7dp"
+        android:topLeftRadius="7dp" android:topRightRadius="0dp"/>
 </shape>
